Added waitlist form fix

--- a/waitlist.html
+++ b/waitlist.html
@@ -2,10 +2,10 @@
     FORM SETUP OPTIONS:
     
     OPTION 1 - Formspree (Recommended):
-    1. Go to https://formspree.io and sign up with sifter@saltsifter.com
+    1. Go to https://formspree.io and sign up with awalsh@sifterlabs.dev
     2. Create a new form and get your form ID
     3. Replace 'YOUR_FORM_ID' in the form action below
-    4. All submissions will be forwarded to sifter@saltsifter.com
+    4. All submissions will be forwarded to awalsh@sifterlabs.dev
     
     OPTION 2 - Netlify Forms (Zero setup if deployed to Netlify):
     1. Just add netlify attribute to form tag
@@ -539,7 +539,7 @@
                 <!-- Form Section -->
                 <div class="waitlist-content" id="waitlist-form">
                     <!-- FORMSUBMIT VERSION (no setup required - works immediately) -->
-                    <form action="https://formsubmit.co/sifter@saltsifter.com" method="POST" id="signup-form">
+                    <form action="https://formspree.io/f/xvgqwlbz" method="POST" id="signup-form">
                         <!-- FormSubmit configuration fields -->
                         <input type="hidden" name="_next" value="waitlist.html?success=true">
                         <input type="hidden" name="_subject" value="New SaltSifter Waitlist Signup">
