Added liquid costs

--- a/index.html
+++ b/index.html
@@ -1464,7 +1464,7 @@
                             <div style="background: #F0FDF4; border-radius: 0.5rem; padding: 1rem;">
                                 <div class="flex" style="justify-content: space-between; align-items: center; margin-bottom: 0.5rem;">
                                     <span style="font-weight: 600; color: var(--primary-800);">Basil - Vegetative Stage</span>
-                                    <span style="font-size: 0.875rem; color: var(--primary-600);">Raw Salts: ~$0.50/100L (vs liquid nutrients)</span>
+                                    <span style="font-size: 0.875rem; color: var(--primary-600);">Raw Salts: ~$0.50/100L (vs liquid nutrients ~$15/100l)</span>
                                 </div>
                                 <div style="font-size: 0.875rem; color: var(--primary-700);">
                                     Target EC: 1.2 • pH: 5.8-6.2 • Temp: 68-72°F
